--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lecture</title>
+    <title>LotR - Home</title>
     <script defer src="./src/app.js"></script>
     <link rel="stylesheet" href="./css/main.css" />
     <script
@@ -61,18 +61,24 @@
         </p>
       </div>
       <section class="topics-container flex-col">
-        <div class="topic flex flex-center">
-          <i class="fa-solid fa-person"></i>
-          <p>Characters</p>
-        </div>
-        <div class="topic flex flex-center">
-          <i class="fa-solid fa-flag"></i>
-          <p>Factions</p>
-        </div>
-        <div class="topic flex flex-center">
-          <i class="fa-solid fa-location-dot"></i>
-          <p>Locations</p>
-        </div>
+        <a href="./pages/characters.html">
+          <div class="topic flex flex-center">
+            <i class="fa-solid fa-person"></i>
+            <p>Characters</p>
+          </div>
+        </a>
+        <a href="./pages/factions.html">
+          <div class="topic flex flex-center">
+            <i class="fa-solid fa-flag"></i>
+            <p>Factions</p>
+          </div>
+        </a>
+        <a href="./pages/locations.html">
+          <div class="topic flex flex-center">
+            <i class="fa-solid fa-location-dot"></i>
+            <p>Locations</p>
+          </div>
+        </a>
       </section>
     </main>
     <footer class="footer flex flex-center">
