changed name of factions.html > races.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </a>
         </li>
         <li>
-          <a href="./pages/factions.html">
+          <a href="./pages/races.html">
             <div class="flex-col flex-center">
               <i class="fa-solid fa-flag navbar-icon"></i>
               <p>Factions</p>
@@ -67,10 +67,10 @@
             <p>Characters</p>
           </div>
         </a>
-        <a href="./pages/factions.html">
+        <a href="./pages/races.html">
           <div class="topic flex flex-center">
             <i class="fa-solid fa-flag"></i>
-            <p>Factions</p>
+            <p>Races</p>
           </div>
         </a>
         <a href="./pages/locations.html">
