--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="./pages/races.html">
             <div class="flex-col flex-center">
               <i class="fa-solid fa-flag navbar-icon"></i>
-              <p>Factions</p>
+              <p>Races</p>
             </div>
           </a>
         </li>
