--- a/pages/characters.html
+++ b/pages/characters.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
+    <script defer src="../src/app.js"></script>
     <script
       src="https://kit.fontawesome.com/210805fa05.js"
       crossorigin="anonymous"
@@ -15,7 +16,7 @@
     <nav class="navbar flex">
       <ul class="flex">
         <li>
-          <a href="./index.html">
+          <a href="../index.html">
             <div class="flex-col flex-center">
               <i class="fa-solid fa-house navbar-icon"></i>
               <p>Home</p>
@@ -59,18 +60,8 @@
         </div>
       </section>
       <hr />
-      <section class="character-container">
-        <div class="character flex-col">
-          <h4>Legolas</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem fuga
-            ad impedit sit iure incidunt dolorum modi cum quam nesciunt, velit
-            placeat doloremque provident, optio molestiae amet, ullam dolore
-            voluptatibus!
-          </p>
-          <img src="" alt="Image of character." />
-        </div>
-      </section>
+      <section class="character-container"></section>
+      <div class="loading hidden"><i class="fa-solid fa-spinner"></i></div>
     </main>
   </body>
 </html>
