--- a/pages/characters.html
+++ b/pages/characters.html
@@ -56,7 +56,11 @@
           <label for="search-input"
             ><i class="fa-solid fa-magnifying-glass"></i
           ></label>
-          <input type="text" id="search-input" placeholder="Character" />
+          <input
+            type="text"
+            id="search-input"
+            placeholder="Character's full name"
+          />
         </div>
       </section>
       <hr />
