--- a/pages/characters.html
+++ b/pages/characters.html
@@ -50,7 +50,7 @@
       </ul>
     </nav>
     <main class="container">
-      <section class="hero"><h1>Characters</h1></section>
+      <section class="hero-character"><h1>Characters</h1></section>
       <section class="filter flex-col">
         <div class="flex search-container">
           <label for="search-input"
