--- a/pages/details.html
+++ b/pages/details.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main class="container flex-col flex-center">
-      <section class="hero"></section>
+      <section class="hero-character"></section>
       <section class="specific-character"></section>
       <button id="back"><a href="./characters.html">Back</a></button>
     </main>
