--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <p>Characters</p>
           </div>
         </a>
-        <a href="./pages/races.html" class="obs-hidden topic-animation">
+        <a href="#" class="obs-hidden topic-animation">
           <div class="topic flex flex-center">
             <i class="fa-solid fa-flag"></i>
             <p>Races</p>
           </div>
         </a>
-        <a href="./pages/locations.html" class="obs-hidden topic-animation">
+        <a href="#" class="obs-hidden topic-animation">
           <div class="topic flex flex-center">
             <i class="fa-solid fa-location-dot"></i>
             <p>Locations</p>
