--- a/pages/details.html
+++ b/pages/details.html
@@ -13,10 +13,12 @@
     ></script>
   </head>
   <body>
-    <main class="container flex-col flex-center">
+    <main class="container">
+      <a href="./characters.html" id="back"
+        ><i class="fa-solid fa-arrow-left"></i
+      ></a>
       <section class="hero-character"></section>
       <section class="specific-character"></section>
-      <button id="back"><a href="./characters.html">Back</a></button>
     </main>
   </body>
 </html>
