--- a/pages/characters.html
+++ b/pages/characters.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
-    <script defer src="../src/app.js"></script>
+    <script defer src="../src/characters.js"></script>
     <script
       src="https://kit.fontawesome.com/210805fa05.js"
       crossorigin="anonymous"
@@ -13,46 +13,12 @@
     <title>LotR - Characters</title>
   </head>
   <body>
-    <nav class="navbar flex">
-      <ul class="flex">
-        <li>
-          <a href="../index.html">
-            <div class="flex-col flex-center">
-              <i class="fa-solid fa-house navbar-icon"></i>
-              <p>Home</p>
-            </div></a
-          >
-        </li>
-        <li>
-          <a href="./pages/characters.html">
-            <div class="flex-col flex-center">
-              <i class="fa-solid fa-person navbar-icon"></i>
-              <p>Characters</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="./pages/races.html">
-            <div class="flex-col flex-center">
-              <i class="fa-solid fa-flag navbar-icon"></i>
-              <p>Races</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="./pages/locations.html">
-            <div class="flex-col flex-center">
-              <i class="fa-solid fa-location-dot navbar-icon"></i>
-              <p>Locations</p>
-            </div>
-          </a>
-        </li>
-      </ul>
-    </nav>
     <main class="container">
-      <section class="hero-character"><h1>Characters</h1></section>
-      <section class="filter flex-col">
-        <div class="flex search-container">
+      <a href="../index.html" id="back-icon"
+        ><i class="fa-solid fa-arrow-left"></i
+      ></a>
+      <section class="filter">
+        <div class="search-container">
           <label for="search-input"
             ><i class="fa-solid fa-magnifying-glass"></i
           ></label>
@@ -63,7 +29,6 @@
           />
         </div>
       </section>
-      <hr />
       <section class="character-container"></section>
       <div class="loading hidden"><i class="fa-solid fa-spinner"></i></div>
     </main>
