final changes maybe

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
             <p>Characters</p>
           </div>
         </a>
-        <a href="#" class="obs-hidden topic-animation">
+        <a href="./pages/books.html" class="obs-hidden topic-animation">
           <div class="topic flex flex-center">
-            <i class="fa-solid fa-flag"></i>
-            <p>Races</p>
+            <i class="fa-solid fa-book"></i>
+            <p>Books</p>
           </div>
         </a>
-        <a href="#" class="obs-hidden topic-animation">
+        <a href="./pages/movies.html" class="obs-hidden topic-animation">
           <div class="topic flex flex-center">
-            <i class="fa-solid fa-location-dot"></i>
-            <p>Locations</p>
+            <i class="fa-solid fa-film"></i>
+            <p>Movies</p>
           </div>
         </a>
       </section>
