--- a/pages/characters.html
+++ b/pages/characters.html
@@ -56,6 +56,10 @@
               <input type="radio" id="hobbit" name="race" value="Hobbit" />
               <label for="hobbit">Hobbit</label>
             </div>
+            <div>
+              <input type="radio" id="dwarf" name="race" value="Dwarf" />
+              <label for="dwarf">Dwarf</label>
+            </div>
           </details>
         </fieldset>
         <button id="submit-button">Search</button>
