--- a/pages/characters.html
+++ b/pages/characters.html
@@ -32,7 +32,7 @@
         <fieldset class="race-container">
           <details>
             <summary>
-              Choose a race <i class="fa-solid fa-caret-down"></i>
+              Choose a race</i>
             </summary>
             <div>
               <input
