some structural changes

--- a/pages/characters.html
+++ b/pages/characters.html
@@ -13,10 +13,12 @@
     <title>LotR - Characters</title>
   </head>
   <body>
+    <!-- Main -->
     <main class="container">
       <a href="../index.html" id="back-icon"
         ><i class="fa-solid fa-arrow-left"></i
       ></a>
+      <!-- Filter -->
       <form class="filter">
         <fieldset class="search-container">
           <label for="search-input"
@@ -64,8 +66,12 @@
         </fieldset>
         <button id="submit-button">Search</button>
       </form>
+      <!-- / Filter -->
+      <!-- Character Container -->
       <section class="character-container hide"></section>
+      <!-- / Character Container -->
       <div class="loading hidden"><i class="fa-solid fa-spinner"></i></div>
     </main>
+    <!-- / Main -->
   </body>
 </html>
