--- a/pages/details_books.html
+++ b/pages/details_books.html
@@ -13,14 +13,20 @@
     ></script>
   </head>
   <body>
+    <!-- Main -->
     <main class="container">
       <a href="./books.html" id="back"
         ><i class="fa-solid fa-arrow-left"></i
       ></a>
+      <!-- Hero -->
       <section class="hero-book"></section>
+      <!-- / Hero -->
       <h2 id="chapter-title">Chapters</h2>
       <hr id="chapter-line" />
+      <!-- Chapters -->
       <section class="chapters"></section>
+      <!-- / Chapters -->
     </main>
+    <!-- / Main -->
   </body>
 </html>
