--- a/pages/details_characters.html
+++ b/pages/details_characters.html
@@ -6,19 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LotR - Character</title>
     <link rel="stylesheet" href="../css/main.css" />
-    <script defer src="../src/details.js"></script>
+    <script defer src="../src/details_characters.js"></script>
     <script
       src="https://kit.fontawesome.com/210805fa05.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
+    <!-- Main -->
     <main class="container">
       <a href="./characters.html" id="back"
         ><i class="fa-solid fa-arrow-left"></i
       ></a>
+      <!-- Hero -->
       <section class="hero-character"></section>
+      <!-- / Hero -->
+      <!-- Specific Character -->
       <section class="specific-character"></section>
+      <!-- / Specific Character -->
     </main>
+    <!-- / Main -->
   </body>
 </html>
