--- a/pages/details_movies.html
+++ b/pages/details_movies.html
@@ -13,12 +13,18 @@
     ></script>
   </head>
   <body>
+    <!-- Main -->
     <main class="container">
       <a href="./movies.html" id="back"
         ><i class="fa-solid fa-arrow-left"></i
       ></a>
+      <!-- Hero -->
       <section class="hero-movie"></section>
+      <!-- / Hero -->
+      <!-- Movie Info -->
       <section class="movie-info"></section>
+      <!-- / Movie Info -->
     </main>
+    <!-- / Main -->
   </body>
 </html>
