--- a/pages/movies.html
+++ b/pages/movies.html
@@ -13,12 +13,16 @@
     <title>LotR - Movies</title>
   </head>
   <body>
+    <!-- Main -->
     <main class="container">
       <a href="../index.html" id="back-icon"
         ><i class="fa-solid fa-arrow-left"></i
       ></a>
+      <!-- Movie Container -->
       <section class="character-container"></section>
+      <!-- / Movie Container -->
       <div class="loading hidden"><i class="fa-solid fa-spinner"></i></div>
     </main>
+    <!-- / Main -->
   </body>
 </html>
