--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <!-- Main -->
     <main class="container">
+      <!-- Sign Up -->
       <section class="card form">
         <h2>Sign Up</h2>
         <hr />
@@ -46,7 +47,11 @@
           </div>
         </form>
       </section>
+      <!-- / Sign Up -->
+      <!-- Welcome -->
       <section class="card animate-before" id="welcome"></section>
+      <!-- / Welcome -->
+      <!-- Topics -->
       <section class="topics-container hide flex-col">
         <a href="./pages/characters.html" class="obs-hidden topic-animation">
           <div class="topic flex flex-center">
@@ -67,6 +72,7 @@
           </div>
         </a>
       </section>
+      <!-- / Topics -->
     </main>
     <!-- / Main -->
   </body>
