--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Landing page" />
     <title>LotR - Home</title>
     <link rel="stylesheet" href="./css/main.css" />
     <script defer src="./src/observer.js"></script>
     <script defer src="./src/index.js"></script>
     <script
+      defer
       src="https://kit.fontawesome.com/210805fa05.js"
       crossorigin="anonymous"
     ></script>
