--- a/pages/characters.html
+++ b/pages/characters.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/main.css" />
     <script defer src="../src/characters.js"></script>
     <script
+      defer
       src="https://kit.fontawesome.com/210805fa05.js"
       crossorigin="anonymous"
     ></script>
