--- a/pages/details_characters.html
+++ b/pages/details_characters.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/main.css" />
     <script defer src="../src/details_characters.js"></script>
     <script
+      defer
       src="https://kit.fontawesome.com/210805fa05.js"
       crossorigin="anonymous"
     ></script>
